# maze-generator

./: .gitignore  CMakeLists.txt  README.md
include/: AStarFinder.h  App.h  BFSFinder.h  Cell.h  DFSGenerator.h  IGeneratorStrategy.h  IPathFinderStrategy.h  KruskalGenerator.h  Maze.h  MazeBuilder.h
src/: AStarFinder.cpp  App.cpp  BFSFinder.cpp  Cell.cpp  DFSGenerator.cpp  KruskalGenerator.cpp  Maze.cpp  MazeBuilder.cpp  main.cpp
tests/: CMakeLists.txt  test_astar_finder.cpp  test_bfs_finder.cpp  test_cell.cpp  test_dfs_generator.cpp  test_helpers.cpp  test_helpers.h  test_kruskal_generator.cpp  test_maze.cpp
tests/integration/: CMakeLists.txt  scenario1_full_cycle.cpp  scenario2_kruskal_bfs.cpp  scenario3_different_sizes.cpp  scenario4_same_start_end.cpp
